[gd_scene load_steps=15 format=3 uid="uid://bl3vpvf543e5w"]

[ext_resource type="Texture2D" uid="uid://cqxhns0kkuwgv" path="res://Assets/Anticon.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Queen.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cr2tc707topui" path="res://Assets/LayEggs.png" id="3"]

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("3")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("3")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="10"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("11")
}],
"loop": false,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 0.996479
height = 4.70344

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(2, 2)

[sub_resource type="CapsuleShape2D" id="12"]
radius = 2.0
height = 4.0

[node name="Queen" type="CharacterBody2D"]
collision_layer = 2147483648
script = ExtResource("2")

[node name="Anticon" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.15, 0.15)
texture = ExtResource("1")

[node name="BirthingPos" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BirthingPos"]
visible = false
rotation = 1.5708
scale = Vector2(0.125, 0.125)
sprite_frames = SubResource("10")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("1")

[node name="BirthingArea" type="CollisionShape2D" parent="."]
position = Vector2(16, 0)
shape = SubResource("2")

[node name="StartBabyTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(8, 6)
layout_mode = 3
anchors_preset = 0
offset_left = -4.74027
offset_top = -3.0
offset_right = 3.25973
offset_bottom = 3.0

[node name="SelectionButton" type="TouchScreenButton" parent="."]
position = Vector2(3, -2)
rotation = 1.5708
shape = SubResource("12")

[connection signal="animation_finished" from="BirthingPos/AnimatedSprite2D" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="StartBabyTimer" to="." method="_on_StartBabyTimer_timeout"]
[connection signal="pressed" from="SelectionButton" to="." method="_on_SelectionButton_pressed"]
[connection signal="released" from="SelectionButton" to="." method="_on_SelectionButton_released"]
